--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,3 +44,5 @@ extra_css:
   - https://unpkg.com/mermaid@8.5.1/dist/mermaid.css
 extra_javascript:
   - https://unpkg.com/mermaid@8.5.1/dist/mermaid.min.js
+
+#teste
